--- a/src/app/components/Doctor-Components/register-doctor/register-doctor.component.html
+++ b/src/app/components/Doctor-Components/register-doctor/register-doctor.component.html
@@ -106,7 +106,7 @@
                 </table>
                 <br>
                 <button type = "submit" class = "buttons">
-                    Save
+                    SAVE
                 </button>
                 <button type = "reset" class = "buttons">
                     CLEAR
