--- a/src/app/components/Patient-Components/patient-buy-medicines/patient-buy-medicines.component.html
+++ b/src/app/components/Patient-Components/patient-buy-medicines/patient-buy-medicines.component.html
@@ -21,8 +21,7 @@
         <br>
         <h4>BUY MEDICINES</h4>
         <p>BUYING MEDICINES IS QUICKER AND SAFER NOW</p>
-        <br>
-        <p>{{errorMessage}}</p>
+        <p style = "color: red;">{{errorMessage}}</p>
         <table class = "table">
             <div></div>
             <thead class="thead-dark">
