--- a/src/app/components/Patient-Components/patient-register/patient-register.component.css
+++ b/src/app/components/Patient-Components/patient-register/patient-register.component.css
@@ -92,6 +92,9 @@ input[type = "email"]{
     width:200px;
 }
 
+input[type = "number"]{
+    width:200px;
+}
 input[type = "date"]{
     width: 200px;
 }
