--- a/src/app/components/Patient-Components/update-account/update-account.component.html
+++ b/src/app/components/Patient-Components/update-account/update-account.component.html
@@ -16,9 +16,9 @@
             <a routerLink="aboutUsPage">ABOUT US</a>
             <a routerLink="contactUsPage">CONTACT US</a>
         </div>
-        </div>
+        
         <br>
-        <h4>UPDATE MY ACCOUNT</h4>
+        <h4 style = "background-color: skyblue;">UPDATE MY ACCOUNT</h4></div>
         <br>
         <form novalidate [formGroup]="updateForm" (ngSubmit)="updatePatient()">
             <fieldset>
