--- a/src/app/components/hospital-facilities/hospital-facilities.component.html
+++ b/src/app/components/hospital-facilities/hospital-facilities.component.html
@@ -13,78 +13,106 @@
 </head>
 <body>
 	<header>
-		<br>
-		<h3>Hospital Facilities</h3>
-		<br>
+		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+			stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+			<path
+				d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+			</path>
+		</svg>
+		- 044-2388 0477
 	</header>
+	
+		<div class="container">
+			<span class="nav">
+				<a href="">HOME</a>
+				<a href="contactUsPage">CONTACT US</a>
+				<a href="aboutUsPage">ABOUT US</a>
+			</span>
+			</div>
 
-	<div class="nav">
-	</div>
-	<br>
-	<br>
-	<br>
-	<br>
+	
 	<div class="container">
+		<br>
+	<h4 style = "background-color: skyblue;">FACILITIES</h4>
+	<br>
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Reception</h4>
+			<div class="col-sm-4" style="background-color:whitesmoke">
+				<h5 class="blackheading">RECEPTION</h5>
 				<br>
 				<p>Click the below button to know the Reception information</p>
-				<button class="btn btn-primary" (click)="receptiondetails()">Click Here</button>
+				<br>
+				<button class="buttons" (click)="receptiondetails()">Click Here</button>
+				<br>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Appointments</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">APPOINTMENTS</h5>
 				<br>
 				<p>Click the below button to know how to take appointments through online</p>
-				<button class="btn btn-primary" (click)="appointments()">Click Here</button>
+				
+				<button class="buttons" (click)="appointments()">Click Here</button>
+				<br>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Patient welfare center</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">PATIENT WELFARE CENTER</h5>
 				<br>
 				<p>Click the below link to know patient welfare centre</p>
-				<button class="btn btn-primary" (click)="pwcdetails()">Click Here</button>
+				<br>
+				<button class="buttons" (click)="pwcdetails()">Click Here</button>
+				<br>
 			</div>
 		</div>
 		<br> <br>
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Infrastructure</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">INFRASTRUCTURE</h5>
 				<br>
 				<p>Click the below link to know Infrastructure</p>
-				<button class="btn btn-primary" (click)="infrastructuredetails()">Click Here</button>
+				<br>
+				<button class="buttons" (click)="infrastructuredetails()">Click Here</button>
+				<br>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Pharmacy</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">PHARMACY</h5>
 				<br>
 				<p>Click the below link to know different types of medicines and there costs</p>
-                <button class="btn btn-primary" (click)="pharmacydetails()">Click Here</button>
+				
+                <button class="buttons" (click)="pharmacydetails()">Click Here</button>
+				<br>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Scanning Centre</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">SCANNING CENTRE</h5>
 				<br>
 				<p>Click the below link to know different types of scans available in our hospital</p>
-				<button class="btn btn-primary" (click)="scancentre()">Click Here</button>
+				
+				<button class="buttons" (click)="scancentre()">Click Here</button>
+				<br>
 			</div>
 		</div>                             
 		<br> <br>
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Laboratory services</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">LABORATORY SERVICES</h5>
 				<br>
 				<p>Click the below link to know different labaratories</p>
-				<button class="btn btn-primary" (click)="labdetails()">Click Here</button>
+				<br>
+				<button class="buttons" (click)="labdetails()">Click Here</button>
+				<br>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Ambulance services</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">AMBULANACE SERVICES</h5>
 				<br>
 				<p>Click the below link to know Ambulance Services</p>
-				<button class="btn btn-primary" (click)="ambulancedetails()">Click Here</button>
+				<br>
+				<button class="buttons" (click)="ambulancedetails()">Click Here</button>
+				<br>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
-				<h4 class="blackheading">Canteen</h4>
+			<div class="col-sm-4" style="background-color: whitesmoke">
+				<h5 class="blackheading">CANTEEN</h5>
 				<br>
 				<p>Click the below link to know about canteen</p>
-				<button class="btn btn-primary" (click)="cantin()">Click Here</button>
+				<br>
+				<button class="buttons" (click)="cantin()">Click Here</button>
+				<br>
 			</div>
 		</div>
 		<br>
