--- a/src/app/components/lab/lab.component.html
+++ b/src/app/components/lab/lab.component.html
@@ -13,8 +13,24 @@
 </head>
 <body>
 	<header>
+		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+			stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+			<path
+				d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+			</path>
+		</svg>
+		- 044-2388 0477
+	</header>
+	
+		<div class="container">
+			<span class="nav">
+				<a href="">HOME</a>
+				<a href="contactUsPage">CONTACT US</a>
+				<a href="aboutUsPage">ABOUT US</a>
+			</span>
+	
 		<br>
-		<marquee behavior=alternate bgcolor=white><h3>LAB FACILITIES</h3></marquee>
+		<marquee behavior=alternate bgcolor=skyblue><h4>LAB FACILITIES</h4></marquee>
         <br>
         <br>
 		<img src="https://media.gettyimages.com/photos/scientists-studying-a-virus-looking-through-microscope-picture-id1215565992?k=20&m=1215565992&s=612x612&w=0&h=szc3OEUPXSSnGcvjMteCDMzQTVcJ-J9UudLq6g7wapU="width="500" height="300">
@@ -27,6 +43,6 @@
             Medical laboratories vary in size and complexity and so offer a variety of testing services. More comprehensive services can be found in acute-care hospitals and medical centers, where 70% of clinical decisions are based on laboratory testing.Doctors offices and clinics, as well as skilled nursing and long-term care facilities, may have laboratories that provide more basic testing services. Commercial medical laboratories operate as independent businesses and provide testing that is otherwise not provided in other settings due to low test volume or complexity </p>
 		<br>
         <br>
-	</header>
+	</div>
     </body>
     </html>
