--- a/src/app/components/pwc/pwc.component.html
+++ b/src/app/components/pwc/pwc.component.html
@@ -13,8 +13,24 @@
 </head>
 <body>
 	<header>
+		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+			stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+			<path
+				d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+			</path>
+		</svg>
+		- 044-2388 0477
+	</header>
+	
+		<div class="container">
+			<span class="nav">
+				<a href="">HOME</a>
+				<a href="contactUsPage">CONTACT US</a>
+				<a href="aboutUsPage">ABOUT US</a>
+			</span>
+	
 		<br>
-		<marquee behavior=alternate bgcolor=cceeff><h3>Patient Welfare Centre</h3></marquee>
+		<marquee behavior=alternate bgcolor=skyblue><h4>PATIENT WELFARE CENTRE</h4></marquee>
         <br>
         <br>
 		<img src="https://tse1.mm.bing.net/th?id=OIP.wUAPKTAMSR7UpmpqxH0DVAHaE8&pid=Api&rs=1&c=1&qlt=95&w=155&h=103"width="500" height="300" ><br>
@@ -24,6 +40,7 @@
             The welfare of patients, both affording and non-affording, is of paramount importance to TKC and it is committed towards helping as many poor patients as possible. The welfare funds, so painstakingly collected, are disbursed by the Patient Welfare Department after careful scrutiny, compassionate consideration and appropriate discretion to help treat poor patients through various services and procedures. It is truly gratifying to note the ever growing number of patients who have been successfully treated as well as the enormous funds collected to meet this demand.</p>
 	    <br>
     <br>
-</header>
+
+	</div>
     </body>
 </html>
