--- a/src/app/components/Patient-Components/view-account/view-account.component.html
+++ b/src/app/components/Patient-Components/view-account/view-account.component.html
@@ -16,9 +16,10 @@
             <a routerLink="aboutUsPage">ABOUT US</a>
             <a routerLink="contactUsPage">CONTACT US</a>
         </div>
-        </div>
+        
         <br>
-        <h4>ACCOUNT DETAILS</h4>
+        <h4 style = "background-color: skyblue;">ACCOUNT DETAILS</h4>
+        </div>
         <br>
         <table align="center" cellspacing="10" cellpadding="10">
             <tr><td>First Name</td>              :<td>{{patient.firstName}}  </td></tr>
