--- a/src/app/components/ambulance/ambulance.component.html
+++ b/src/app/components/ambulance/ambulance.component.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Ambulance service</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-	crossorigin="anonymous">
+<head>
+	<title>Ambulance service</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
+
 <body>
 	<header>
-		<br>
-		<marquee behavior=alternate bgcolor=cceeff><h3>Ambulance Service</h3></marquee>
-        <br>
-        <br>
-		<img src="https://media.istockphoto.com/photos/ambulance-on-a-white-background-picture-id177362301?k=20&m=177362301&s=612x612&w=0&h=4DrJhT4WhSYjUqh_ebTnec-vFUAyjEtYadmpWXkoEUw=">
-        <br>
-        <br>
-		<p>An ambulance is a medically equipped vehicle which transports patients to treatment facilities, such as hospitals.Typically, out-of-hospital medical care is provided to the patient.Ambulances are used to respond to medical emergencies by emergency medical services. For this purpose, they are generally equipped with flashing warning lights and sirens. They can rapidly transport paramedics and other first responders to the scene, carry equipment for administering emergency care and transport patients to hospital or other definitive care. Most ambulances use a design based on vans or pick-up trucks. Others take the form of motorcycles, cars, buses, aircraft and boats.Generally, vehicles count as an ambulance if they can transport patients. However, it varies by jurisdiction as to whether a non-emergency patient transport vehicle (also called an ambulette) is counted as an ambulance. These vehicles are not usually (although there are exceptions) equipped with life-support equipment, and are usually crewed by staff with fewer qualifications than the crew of emergency ambulances. Conversely, EMS agencies may also have emergency response vehicles that cannot transport patients.[2] These are known by names such as nontransporting EMS vehicles, fly-cars or response vehicles. </p>
-		  <br> 
-          For any querries contact us +100
-        <br>
+		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+			stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+			class="feather feather-phone">
+			<path
+				d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+			</path>
+		</svg>
+		- 044-2388 0477
 	</header>
-</body>
-</html>
+	<div class="container">
+		<span class="nav">
+			<a href="contactUsPage">CONTACT US</a>
+			<a href="aboutUsPage">ABOUT US</a>
+			<a href="registerPage">SIGN UP</a>
+			<a href="loginPage">LOGIN</a>
+		</span>
 
+		<br>
+		<marquee behavior=alternate bgcolor=skyblue><h4>ABOUT OUR AMBULANCE SERVICES</h4></marquee>
+		<br>
+		<br>
+		<img
+			src="https://media.istockphoto.com/photos/ambulance-on-a-white-background-picture-id177362301?k=20&m=177362301&s=612x612&w=0&h=4DrJhT4WhSYjUqh_ebTnec-vFUAyjEtYadmpWXkoEUw=">
+		<br>
+		<br>
+		<p>An ambulance is a medically equipped vehicle which transports patients to treatment facilities, such as
+			hospitals.Typically, out-of-hospital medical care is provided to the patient.Ambulances are used to respond
+			to medical emergencies by emergency medical services. For this purpose, they are generally equipped with
+			flashing warning lights and sirens. They can rapidly transport paramedics and other first responders to the
+			scene, carry equipment for administering emergency care and transport patients to hospital or other
+			definitive care. Most ambulances use a design based on vans or pick-up trucks. Others take the form of
+			motorcycles, cars, buses, aircraft and boats.Generally, vehicles count as an ambulance if they can transport
+			patients. However, it varies by jurisdiction as to whether a non-emergency patient transport vehicle (also
+			called an ambulette) is counted as an ambulance. These vehicles are not usually (although there are
+			exceptions) equipped with life-support equipment, and are usually crewed by staff with fewer qualifications
+			than the crew of emergency ambulances. Conversely, EMS agencies may also have emergency response vehicles
+			that cannot transport patients.[2] These are known by names such as nontransporting EMS vehicles, fly-cars
+			or response vehicles. </p>
+		<br>
+		For any querries contact us +100
+		<br>
+
+	</div>
+</body>
+
+</html>
