--- a/src/app/components/cantin/cantin.component.css
+++ b/src/app/components/cantin/cantin.component.css
@@ -1,10 +1,86 @@
 @charset "ISO-8859-1";
+header{
+    font-size: small;
+    padding: 5px;
+    text-align: right;
+    color: black;
+    background-color:skyblue;
+}
 
-header {
-	background-color: #CCEEFF;
-	color: black;
-	font-size: 20px;
-	margin: 0;
+.nav{
+    background-color: white;
+}
+.nav a{
+    font-weight: 400;
+    color: black;
+    padding: 20px;
+    text-decoration: none;
+}
+
+.nav a:hover{
+    color:skyblue;
+}
+
+img{
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.nav a:active{
+    color: skyblue
+}
+
+.headerRight{
+    font-weight: 400;
+    color: black;
+    padding: 20px;
+    text-decoration: none;
+    
+}
+
+footer{
+    background-color:skyblue;
+   text-align:center;
+   color: black;  
+   font-size: 10px;
+}
+
+.findUs{
+    font-weight: 500;
+    font-size: medium;
+}
+
+
+a{
+    text-decoration: none;
+    color:black;
+    padding-left: 30px;
+}
+
+.skyblue{
+    background-color: skyblue;
+}
+
+.black{
+    background-color: black;
+    color: white;
+}
+
+.buttons {
+    align-content: center;
+	color:black;
+    background-color:skyblue;
+    text-decoration:none;;
+    border:none;
+    padding:8px 14px;
+    font-size:15px;
+    margin-right: 10px;
+}
+.buttons:hover{
+
+	color:black;
+    background-color:whitesmoke;
+    border: 2px solid black;
 }
 
 body {
@@ -13,108 +89,3 @@ body {
 	color: black;
 }
 
-.nav {
-	background-color: black;
-	overflow: hidden;
-}
-
-.nav a {
-	float: left;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 14px;
-}
-
-.nav right {
-	margin-left: 0px;
-}
-h3{
-	colour :#CCEEFF;
-}
-
-h4 {
-	font-weight: lighter;
-}
-
-.nav a:hover {
-	background-color:black;
-	color:#000000;
-}
-
-.nav a:active {
-	background-color: black;
-	color:#000000;
-}
-
-.nav-right {
-	margin-right: 0px;
-	float: right;
-}
-
-.blackheading {
-	background-color: black;
-	color: white;
-}
-
-
-form {
-	padding: 4px 4px;
-	background-color: black;
-	color: white;
-	margin-right: 0px;
-}
-
-.container a:link {
-	color: white;
-	text-decoration: none;
-	background-color: black;
-	border: none;
-	padding: 10px 14px;
-	font-size: 15px;
-}
-
-.col-sm-4 a:hover{
-	color:#a6a6a6;
-	background-color: #CCEEFF;
-	border: 2px solid black;
-}
-
-.col-sm-6 a:hover{
-	color:#a6a6a6;
-	background-color: #CCEEFF;
-	border: 2px solid black;
-}
-
-.container a:visited {
-	color: white;
-}
-
-.container a:hover{
-	color:black;
-	background-color: #CCEEFF;
-	border: 2px solid black;
-}
-
-.buttons{
-		color: white;
-	text-decoration: none;
-	background-color: black;
-	border: none;
-	padding: 10px 14px;
-	font-size: 15px;
-}
-
-.buttons:hover{
-	color:black;
-	background-color: #CCEEFF;
-	border: 2px solid black;
-}
-
-footer {
-	background-color: black;
-	text-align: center;
-	color: #ffffff;
-	font-size: 10px;
-}
