--- a/src/app/components/cantin/cantin.component.html
+++ b/src/app/components/cantin/cantin.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CANTIN</title>
+<title>CANTEEN</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link
@@ -12,9 +12,25 @@
 
 </head>
 <body>
-	<header>
+    <header>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+            <path
+                d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+            </path>
+        </svg>
+        - 044-2388 0477
+    </header>
+    <div class="container">
+        <span class="nav">
+            <a href="adminDashboard">HOME</a>
+            <a href="adminDashboard">DASHBOARD</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+        </span>
+
 		<br>
-		<marquee behavior=alternate bgcolor=cceeff><h3> CANTEEN FACILITIES</h3></marquee>
+        <marquee behavior=alternate bgcolor=skyblue><h4>ABOUT OUR CANTEENS</h4></marquee>
         <br>
         <br>
 		<img src="https://tse1.mm.bing.net/th?id=OIP.AEe0Myt6W2QMkRYwWnjD2wHaFv&pid=Api&rs=1&c=1&qlt=95&w=155&h=120"width="500" height="300" ><br>
@@ -30,6 +46,7 @@
         <img src="https://media.istockphoto.com/photos/chef-standing-behind-full-lunch-service-station-with-assortment-of-picture-id1138204965?k=20&m=1138204965&s=612x612&w=0&h=8DBx69GCH_5Zeb9G5hjjImLbgPh5jVClJw2YqPi0wrs=" alt=""width="200" height="200">
         <img src="https://media.istockphoto.com/photos/commercial-kitchen-picture-id157590504?k=20&m=157590504&s=612x612&w=0&h=xa0MnsHmcwO5zOHDcJENPoL8cpIxV6f6_nJ2TXIC7Qo=" alt=""width="200" height="200">
         <img src="https://media.istockphoto.com/photos/lunch-service-station-picture-id177392719?k=20&m=177392719&s=612x612&w=0&h=8LGNcbZVRU8Y1NKWaR5Zp_bW0HSvvNlV5YhpQVKT18s=" alt=""width="200" height="200">
-    </header>
+    </div>
+    <br>
 </body>
 </html>
