--- a/src/app/components/lab/pharmacy/pharmacy.component.html
+++ b/src/app/components/lab/pharmacy/pharmacy.component.html
@@ -12,9 +12,27 @@
 
 </head>
 <body>
-	<header>
+    <header>
+		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+			stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+			<path
+				d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+			</path>
+		</svg>
+		- 044-2388 0477
+	</header>
+	
+		<div class="container">
+			<span class="nav">
+				<a href="">HOME</a>
+				<a href="contactUsPage">CONTACT US</a>
+				<a href="aboutUsPage">ABOUT US</a>
+			</span>
+			
+	
+	
 		<br>
-		<marquee behavior=alternate bgcolor=blue><h3>Pharmacy of  Hospital</h3></marquee>
+		<marquee behavior=alternate bgcolor=skyblue><h4>ABOUT OUR PHARMACY</h4></marquee>
         <br>
         <br>
 		<img src="https://tse1.mm.bing.net/th?id=OIP.6bi0nUP-iIceemwCCCXNOwHaEu&pid=Api&rs=1&c=1&qlt=95&w=145&h=92"width="500" height="300">
@@ -33,6 +51,8 @@
         <P>for any querries contact usz +8976436532</P>
         <br>
         <img src="https://media.istockphoto.com/vectors/safe-home-delivery-during-coronavirus-covid19-epidemic-vector-id1218608133?k=20&m=1218608133&s=612x612&w=0&h=fFXWnjepDPAhZIDN0Mk-n862zrNfaKf8NGEZRVRwrfo=" alt="">
-	</header>
+</div>
+<br>
+<br>
     </body>
 </html>
