--- a/src/app/components/scancentre/scancentre.component.html
+++ b/src/app/components/scancentre/scancentre.component.html
@@ -12,21 +12,33 @@
 
 </head>
 <body>
-	<header>
-		<br>
-		<h3>Scan Centre</h3>
-		<br>
+    <header>
+		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+			stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+			<path
+				d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+			</path>
+		</svg>
+		- 044-2388 0477
 	</header>
-
-	<div class="nav">
-	</div>
-	<br>
-	<br>
-	<br>
+	
+		<div class="container">
+			<span class="nav">
+				<a href="">HOME</a>
+				<a href="contactUsPage">CONTACT US</a>
+				<a href="aboutUsPage">ABOUT US</a>
+			</span>
+			</div>
+            <br>
+	<header>
+		
+		<h4 style = "background-color: skyblue;">Scan Centre</h4>
+		
+	</header>
 	<br>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color:whitesmoke">
 				<h4 class="blackheading">X-RAY-SCAN</h4>
                 <img src="https://tse1.mm.bing.net/th?id=OIP.XfIFaBb9wYJ0v9NH8z8LPQHaE8&pid=Api&rs=1&c=1&qlt=95&w=171&h=114" 
                       alt="" width="150" height="100">
@@ -46,7 +58,7 @@
                  <p class="blackheading">The cost of X-ray Scan is 700</p>
 				
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">MRI-SCAN</h4>
                 <img src="https://tse1.mm.bing.net/th?id=OIP.fiJ0XdrdKaAoouNeLRSxyAHaE8&pid=Api&rs=1&c=1&qlt=95&w=171&h=114" 
                        alt="" width="150" height="100">
@@ -63,7 +75,7 @@
                     <p class="blackheading">The cost of X-ray Scan is 1000</p>
 				
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">CT-SCAN</h4>
                 <img src="https://media.gettyimages.com/photos/doctor-showing-ct-scan-to-patient-picture-id493216325?k=20&m=493216325&s=612x612&w=0&h=uUaAcekAZpM5cMr1X76s3vedOBYxQX985D2Bz-Q9rkM=" 
                               alt="" width="150" height="100">
@@ -84,7 +96,7 @@
 		</div>
 		<br> <br>
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">CARDIAC SCAN</h4>
                 <img src="https://media.gettyimages.com/photos/indian-doctor-doing-a-heart-ultrasound-to-a-middle-aged-male-patient-picture-id917730100?k=20&m=917730100&s=612x612&w=0&h=iYZgiEJffmUcxn00HA7bBeOPBYispx_3wkvKStYcL3M=" 
                        alt="" width="150" height="100">
@@ -101,7 +113,7 @@
                      your mouth. </p>
                      <p class="blackheading">The cost of X-ray Scan is 1400</p>
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">PET-SCAN</h4>
                 <img src="https://media.istockphoto.com/photos/patient-lying-inside-a-medical-scanner-in-hospital-picture-id503663386?k=20&m=503663386&s=612x612&w=0&h=iU1D0tk7aDUB32oZQWh9EI2StDUD5DdLFvVyFThT6zA=" 
                          alt="" width="150" height="100">
@@ -119,7 +131,7 @@
                     <p class="blackheading">The cost of X-ray Scan is 1500</p>
 				
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">DXA SCAN</h4>
                 <img src="https://media.gettyimages.com/photos/rheumatology-consultation-senior-picture-id697571705?k=20&m=697571705&s=612x612&w=0&h=ktmCz5j-NgDjmQrRgfuEjx4_EodNENP_wZ98kkDyxUY="
                             alt="" width="150" height="100">
@@ -140,7 +152,7 @@
 		</div>
 		<br> <br>
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">ECG</h4>
                 <img src="https://media.gettyimages.com/photos/keeping-a-close-monitor-on-the-patients-state-of-health-picture-id995967102?k=20&m=995967102&s=612x612&w=0&h=yRkO3rb6m8ztR-pVnrCutskp5Lv_MygDJQxjQndaQQc=" 
                         alt="" width="150" height="100">
@@ -158,7 +170,7 @@
                     <p class="blackheading">The cost of X-ray Scan is 3000</p>
 				
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">ULTRASOUND SCAN</h4>
                 <img src="https://tse1.mm.bing.net/th?id=OIP.DeZkLdR_a4NJzb9gq_i3iQHaE8&pid=Api&rs=1&c=1&qlt=95&w=180&h=120" 
                        alt="" width="150" height="100">
@@ -176,7 +188,7 @@
                      <p class="blackheading" >The cost of X-ray Scan is 2500</p>
                 
 			</div>
-			<div class="col-sm-4" style="background-color: #CCEEFF">
+			<div class="col-sm-4" style="background-color: whitesmoke">
 				<h4 class="blackheading">CARDIAC CALCIUM SCORING</h4>
                 <img src="https://tse1.mm.bing.net/th?id=OIP.ChIbPFaaXP_bIPerNrBQdwHaFo&pid=Api&rs=1&c=1&qlt=95&w=145&h=110" 
                        alt="" width="150" height="100">
