--- a/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
@@ -11,14 +11,14 @@
 <body align="center">
     <div class="container">
         <span class="nav">
-            <a href="adminDashboard">HOME</a>
+            <a href="">HOME</a>
             <a href="adminDashboard">DASHBOARD</a>
             <a href="contactUsPage">CONTACT US</a>
             <a href="aboutUsPage">ABOUT US</a>
         </span>
         <br>
         <br>
-        <h5>WELCOME TO ADMIN DASHBOARD</h5>
+        <h4 style = "background-color: skyblue;">WELCOME TO ADMIN DASHBOARD</h4>
         <br>
         <br>
         <div style="background-color: whitesmoke;">
