--- a/src/app/components/Admin-Components/admin-medicine-list/admin-medicine-list.component.html
+++ b/src/app/components/Admin-Components/admin-medicine-list/admin-medicine-list.component.html
@@ -27,10 +27,12 @@
           </svg></button>
 
           </form>
-        <p>{{errorMessage}}</p>
+          <br>
+          <p style = "color:green">{{successMessage}}</p>
+        <p style = "color:red">{{errorMessage}}</p>
         <table class = "table">
             <div></div>
-            <thead class="thead-dark">
+            <thead style = "font-weight: 600px;">
                 <th>MEDICINE NUMBER</th>
                 <th>EMAIL</th>
                <th>MEDICINES</th>
@@ -74,8 +76,7 @@
               </svg></button>
               </form>
         <br>
-        <a class = "buttons" href = "patientDashboard">DASHBOARD</a>
-        <a class = "buttons" href = "medicinesuccess">GO TO CART</a>
+        <a class = "buttons" href = "adminDashboard">DASHBOARD</a>
         <br>
         <br>
         <br>
