--- a/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.html
+++ b/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.html
@@ -26,7 +26,7 @@
           <br>
           <p style = "color:red">{{deleteMessage}}</p>
           <p style = "color:red">{{errorMessage}}</p>
-        <h4>PATIENT LIST</h4>
+        <h4 style = "background-color: skyblue;">PATIENT LIST</h4>
         <br>
 
             <table class = "table">
