--- a/src/app/components/Admin-Components/appointment-list/appointment-list.component.html
+++ b/src/app/components/Admin-Components/appointment-list/appointment-list.component.html
@@ -59,7 +59,7 @@
         <br>
         <br>
         <p style="color:red">{{errorMessage}}</p>
-        <h4>APPOINTMENTS LIST</h4>
+        <h4 style = "background-color: skyblue;">APPOINTMENTS LIST</h4>
         <br>
 
         <table class="table table-striped">
@@ -104,7 +104,7 @@
 
         </table>
         <br>
-        <a class="buttons" href="adminDashBoard">GO TO DASHBOARD</a>
+        <a class="buttons" href="adminDashboard">GO TO DASHBOARD</a>
         <a class="buttons" href="">HOME</a>
     </div>
     <br>
