--- a/src/app/components/Doctor-Components/add-medicine/add-medicine.component.html
+++ b/src/app/components/Doctor-Components/add-medicine/add-medicine.component.html
@@ -18,7 +18,9 @@
         </div>
         </div>
         <br>
-        <h4>ADD MEDICINES TO PATIENT</h4>
+        <div class = "container">
+        <h4 style  = "background-color: skyblue;">ADD MEDICINES TO PATIENT</h4>
+        </div>
         <br>
 
         <p style = "color:green">{{successMessage}}</p>
@@ -78,6 +80,7 @@
                 <button class = "buttons" type = "reset" class = "buttons">
                     CLEAR
                 </button>
+                <br>
                 <br>
                 <br>
                 <br>
