--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -29,12 +29,13 @@
                     Click the below button to allocate medicines for patient as per their email Id
                     <br>
                     <br> 
+                    <br>
                     <a class="buttons" href="doctorAddMedicine">CLICK HERE</a>
                     <br>
                     <br>
                 </div>
                 <div class="col-sm-6" style="background-color:whitesmoke;">
-                    <h5 class="skyblue">ALL APPOINTMENTs</h5>
+                    <h5 class="skyblue">ALL APPOINTMENTS</h5>
                     <br>
                     Book an appointment for consulting with one of our specialists
                     through our website, you can book for both offline and online
@@ -59,7 +60,7 @@
                 <div class="col-sm-6" style="background-color:whitesmoke;">
                     <h5 class="skyblue">VIEW ALL PATIENTS</h5>
                     <br>
-                    Click the button below to see your details
+                    Click the button below to see all patients details
                 
                     <br>
                     <br>
