--- a/src/app/components/Doctor-Components/view-account/view-account.component.html
+++ b/src/app/components/Doctor-Components/view-account/view-account.component.html
@@ -16,9 +16,9 @@
             <a routerLink="aboutUsPage">ABOUT US</a>
             <a routerLink="contactUsPage">CONTACT US</a>
         </div>
-        </div>
+        
         <br>
-        <h4>ACCOUNT DETAILS</h4>
+        <h4 style = "background-color: skyblue;">ACCOUNT DETAILS</h4>
         <br>
         <table align="center" cellspacing="10" cellpadding="10">
             
@@ -32,16 +32,12 @@
            </table>
         <br>
  
-        <button class = "buttons" (click) = "updateDoctor()">UPDATE</button>
-        <button class = "buttons" (click) = "goBack()">Go Back</button>
+        <button class = "buttons" (click) = "goBack()">BACK</button>
         <br>
         <br>
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        
+      
+        </div>
 </body>
