--- a/src/app/components/Patient-Components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/components/Patient-Components/patient-dashboard/patient-dashboard.component.html
@@ -18,7 +18,7 @@
         </span>
         <br>
         <br>
-        <h5>WELCOME TO DASHBOARD</h5>
+        <h4 style = "background-color: skyblue;">WELCOME TO DASHBOARD</h4>
         <br>
         <br>
         <div style="background-color: whitesmoke;">
