--- a/src/app/components/Patient-Components/view-account/view-account.component.html
+++ b/src/app/components/Patient-Components/view-account/view-account.component.html
@@ -37,7 +37,7 @@
         <br>
  
         <button class = "buttons" (click) = "updatePatient()">UPDATE</button>
-        <button class = "buttons" (click) = "goBack()">Go Back</button>
+        <button class = "buttons" (click) = "goBack()">BACK</button>
         <br>
         <br>
         <br>
